# PhotoEdit

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.claude/hooks/: session-start.sh
.github/workflows/: ci.yml
docs/: 00-vision-and-scope.md  01-master-architecture.md  02-technology-stack.md  03-roadmap-and-milestones.md  04-coding-standards.md  05-build-and-tooling.md  README.md  STATUS.md  glossary.md
docs/adr/: 0001-language-and-framework.md  0002-gpu-abstraction.md  0003-tile-based-engine.md  0004-color-management.md  0005-command-history-model.md  0006-headless-core-separation.md  0007-native-document-format.md  README.md
docs/systems/: 01-document-system.md  02-canvas-rendering.md  03-layer-system.md  04-blend-modes.md  05-adjustment-layers.md  06-masks.md  07-selection-system.md  08-brush-engine.md  09-tool-system.md  10-transform-system.md  11-smart-objects.md  12-filter-engine.md  13-retouching.md  14-generative-ai.md  15-color-management.md  16-camera-raw.md  17-text-typography.md  18-vector-paths.md  19-channels.md  20-file-io.md  21-history-undo.md  22-performance.md  23-gpu-acceleration.md  24-ui-workspace.md  25-presets-assets.md  26-automation.md  27-printing-prepress.md  28-cloud-account.md  29-plugin-extension.md
src/app/: CMakeLists.txt  CanvasView.cpp  CanvasView.hpp  ColorPanel.cpp  ColorPanel.hpp  CurveEditorWidget.cpp  CurveEditorWidget.hpp  CurvesDialog.cpp  CurvesDialog.hpp  EffectDialog.cpp  EffectDialog.hpp  ExportDialog.cpp  ExportDialog.hpp  GroupedSlidersDialog.cpp  GroupedSlidersDialog.hpp  HistoryPanel.cpp  HistoryPanel.hpp  IconUtil.cpp  IconUtil.hpp  LayersPanel.cpp  LayersPanel.hpp  MainWindow.cpp  MainWindow.hpp  PanelHeader.cpp  PanelHeader.hpp  PropertiesPanel.cpp  PropertiesPanel.hpp  TextDialog.cpp  TextDialog.hpp  TextRender.cpp  TextRender.hpp  Theme.cpp  Theme.hpp  icons.qrc  main.cpp
src/app/icons/: LICENSE.txt
src/core/: CMakeLists.txt
src/core/include/pe/core/: Adjustment.hpp  AdjustmentLayer.hpp  AutoTone.hpp  BlendMode.hpp  Brush.hpp  CanvasRenderer.hpp  Channels.hpp  Color.hpp  ColorEngine.hpp  ColorOps.hpp  ColorProfile.hpp  ColorSpace.hpp  ColorTransform.hpp  Command.hpp  Commands.hpp  Compositor.hpp  Document.hpp  DocumentChange.hpp  DocumentIO.hpp  Filter.hpp  Geometry.hpp  GroupLayer.hpp  Histogram.hpp  History.hpp  ImageIO.hpp  Layer.hpp  Mask.hpp  NativeFormat.hpp  PaintToolController.hpp  Performance.hpp  PixelBuffer.hpp  PixelFormat.hpp  PixelLayer.hpp  RHI.hpp  Selection.hpp  SolidColorLayer.hpp  TextLayer.hpp  Tile.hpp  TileStore.hpp  Version.hpp  (+1 more)
src/core/src/: Adjustment.cpp  AdjustmentLayer.cpp  AutoTone.cpp  BlendMode.cpp  Brush.cpp  CanvasRenderer.cpp  Channels.cpp  ColorEngine.cpp  ColorOps.cpp  ColorProfile.cpp  ColorSpace.cpp  ColorTransform.cpp  Commands.cpp  Compositor.cpp  Document.cpp  DocumentIO.cpp  Filter.cpp  GroupLayer.cpp  Histogram.cpp  History.cpp  Jpeg.cpp  Layer.cpp  Mask.cpp  NativeFormat.cpp  PaintToolController.cpp  Performance.cpp  PixelBuffer.cpp  PixelLayer.cpp  Png.cpp  Psd.cpp  RHI.cpp  Selection.cpp  SolidColorLayer.cpp  TextLayer.cpp  Tiff.cpp  TileStore.cpp  ViewTransform.cpp  Webp.cpp
tests/: CMakeLists.txt  pe_test.hpp  test_main.cpp
tests/core/: test_adjustment.cpp  test_autotone.cpp  test_blend.cpp  test_brush.cpp  test_canvasrenderer.cpp  test_channels.cpp  test_color.cpp  test_colorengine.cpp  test_colorops.cpp  test_colorprofile.cpp  test_colorspace.cpp  test_colortransform.cpp  test_compositor.cpp  test_crop.cpp  test_document.cpp  test_documentio.cpp  test_filter.cpp  test_geometry.cpp  test_histogram.cpp  test_history.cpp  test_jpeg.cpp  test_layer.cpp  test_layergroup.cpp  test_livestroke.cpp  test_mask.cpp  test_maskbrush.cpp  test_maskcommands.cpp  test_nativeformat.cpp  test_painttool.cpp  test_pixelbuffer.cpp  test_png.cpp  test_psd.cpp  test_selection.cpp  test_setselection.cpp  test_textlayer.cpp  test_tiff.cpp  test_tile.cpp  test_tilestore.cpp  test_viewtransform.cpp  test_webp.cpp
